--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
         <th>TotalMovesBlack</th>
     </tr>
     <tr>
-            <td><p id="wp"></p></td>
-            <td><p id="frm"></p></td>
-            <td><p id="to"></p></td>
-            <td><p id="wnoOfMoves"></p></td>
-            <td><p id="bnoOfMoves"></p></td>
+            <td><center><p id="wp"></p></center></td>
+            <td><center><p id="frm"></p></center></td>
+            <td><center><p id="to"></p></center></td>
+            <td><center><p id="wnoOfMoves"></p></center></td>
+            <td><center><p id="bnoOfMoves"></p></center></td>
     </tr>
     </table>
     
